Fix issue with mixed case names for UDFs
When a UDF is used in a generated column then an Expression is built
with the use of the `SqlParser`, and `Function#toString(Style)`
is called to create a `GeneratedReference`. `toString(Style)` calls
in turn `Function#displayName()` which previously was not quoting
neither the schema nor the function name, thus the UDF in the generated
column ended up as lowercase, because of the use of
`SqlParser.createExpression()` which lowercases all unquoted
identifiers.

Fixes: #16549
(cherry picked from commit 443096aedb87e1108325819346eb7913c74c31be)