@@ -22,9 +22,9 @@
 package io.crate.expression.udf;
 
 import static io.crate.testing.Asserts.assertThat;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -34,6 +34,9 @@ import org.junit.Before;
 import org.junit.Test;
 
 import io.crate.analyze.FunctionArgumentDefinition;
+import io.crate.exceptions.UnsupportedFunctionException;
+import io.crate.expression.symbol.Function;
+import io.crate.expression.symbol.format.Style;
 import io.crate.metadata.FunctionImplementation;
 import io.crate.metadata.FunctionName;
 import io.crate.metadata.FunctionProvider;
@@ -61,7 +64,7 @@ public class UserDefinedFunctionsTest extends UdfUnitTest {
         var udf = new UserDefinedFunctionMetadata(
             schema,
             name,
-            types.stream().map(FunctionArgumentDefinition::of).collect(toList()),
+            types.stream().map(FunctionArgumentDefinition::of).toList(),
             returnType,
             lang,
             definition);
@@ -85,6 +88,44 @@ public class UserDefinedFunctionsTest extends UdfUnitTest {
             "function subtract(a, b) { return a + b; }");
         assertThat(sqlExecutor.asSymbol("test.subtract(2::integer, 1::integer)"))
             .isLiteral(DummyFunction.RESULT);
+    }
+
+    @Test
+    public void test_function_name_and_schema_with_camel_case_strings() throws IOException {
+        // camelCase Schema and name
+        registerUserDefinedFunction(
+            DUMMY_LANG.name(),
+            "MyScHEmA",
+            "mYFunCTioN",
+            DataTypes.INTEGER,
+            List.of(DataTypes.INTEGER, DataTypes.INTEGER),
+            "function mYFunCTioN(a, b) { return a + b; }");
+
+        assertThatThrownBy(() -> sqlExecutor.asSymbol("MyScHEmA.mYFunCTioN(1::integer, 2::integer)"))
+            .isExactlyInstanceOf(UnsupportedFunctionException.class)
+            .hasMessage("Unknown function: myschema.myfunction(1, 2)");
+
+        Function f = (Function) sqlExecutor.asSymbol("\"MyScHEmA\".\"mYFunCTioN\"(ints, 10)");
+        assertThat(f.toString(Style.QUALIFIED)).isEqualTo("\"MyScHEmA\".\"mYFunCTioN\"(doc.users.ints, 10)");
+        assertThat(f.toString(Style.UNQUALIFIED)).isEqualTo("\"MyScHEmA\".\"mYFunCTioN\"(ints, 10)");
+
+        // null schema and camelCase name is considered as builtin -> no quoting
+        // a UDF cannot be created with a null schema, if not defined, the schema from `search_path` is used
+        registerUserDefinedFunction(
+            DUMMY_LANG.name(),
+            null,
+            "myOTHerFUncTIOn",
+            DataTypes.INTEGER,
+            List.of(DataTypes.INTEGER, DataTypes.INTEGER),
+            "function myOTHerFUncTIOn(a, b) { return a + b; }");
+
+        assertThatThrownBy(() -> sqlExecutor.asSymbol("myOTHerFUncTIOn(1::integer, 2::integer)"))
+            .isExactlyInstanceOf(UnsupportedFunctionException.class)
+            .hasMessage("Unknown function: myotherfunction(1, 2)");
+
+        f = (Function) sqlExecutor.asSymbol("\"myOTHerFUncTIOn\"(ints, 10)");
+        assertThat(f.toString(Style.QUALIFIED)).isEqualTo("myOTHerFUncTIOn(doc.users.ints, 10)");
+        assertThat(f.toString(Style.UNQUALIFIED)).isEqualTo("myOTHerFUncTIOn(ints, 10)");
     }
 
     @Test
